--- a/index.html
+++ b/index.html
@@ -16,14 +16,34 @@
         <div class="col-4 text-center">
             <h2>カラーコード</h2>
             <textarea id="text" cols="15" rows="30" style="vertical-align: top;">
-#fed552
-#554171
-#ee762e
-#ea5b76
-#6bb6b0
-#afa690
-#d1342c
-#e9739b</textarea>
+#ffa700
+#ffbad6
+#144384
+#ffe012
+#853998
+#f84cad
+#a846fb
+#006047
+#3b91c4
+#d9f2ff
+#fa8333
+#e5461c
+#f93b90
+#ffc602
+#89c3eb
+#90e667
+#e43b80
+#f54275
+#e75bec
+#fbfafa
+#e71212
+#f30100
+#5ce626
+#ff00ff
+#50d0d0
+#be1e3e
+#7967c3
+#ffc639</textarea>
         </div>
         <div class="col-2">
             <button type="button" class="btn btn-primary" onclick="generateCircle();">生成</button>
